--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "@reduxjs/toolkit": "^1.8.5",
+    "react-redux": "^8.0.2"
   },
   "scripts": {
     "dev": "REACT_APP_ENV=local react-scripts start",
