--- a/package.json
+++ b/package.json
@@ -97,5 +97,5 @@
     "storybook-addon-designs": "^6.3.1",
     "webpack": "^5.74.0"
   },
-  "homepage": "."
+  "homepage": "https://market-task.herokuapp.com"
 }
