--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0",
     "@reduxjs/toolkit": "^1.8.5",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "styled-components": "^5.3.5"
   },
   "scripts": {
     "dev": "REACT_APP_ENV=local react-scripts start",
@@ -94,7 +95,6 @@
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0",
     "storybook-addon-designs": "^6.3.1",
-    "styled-components": "^5.3.5",
     "webpack": "^5.74.0"
   },
   "homepage": "https://market-task.herokuapp.com"
