--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.5",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "@reduxjs/toolkit": "^1.8.5",
-    "react-redux": "^8.0.2",
-    "styled-components": "^5.3.5"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "dev": "REACT_APP_ENV=local react-scripts start",
@@ -59,6 +60,7 @@
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-links": "^6.5.10",
+    "@storybook/addons": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/node-logger": "^6.5.10",
@@ -94,8 +96,7 @@
     "prop-types": "^15.8.1",
     "react-test-renderer": "^18.2.0",
     "storybook-addon-designs": "^6.3.1",
-    "webpack": "^5.74.0",
-    "@storybook/addons": "^6.5.10"
+    "webpack": "^5.74.0"
   },
   "homepage": "https://market-task.herokuapp.com"
 }
